--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,7 @@ security:
         superadmin:
             memory:
                 users:
-                    superadmin:  { password: "%superadmin_password%", roles: [ 'ROLE_SUPERADMIN' ] }
+                    superadmin:  { password: admin, roles: [ 'ROLE_SUPERADMIN' ] }
 
         main:
             id: fos_user.user_provider.username
