Finition du pannel d'admin des voyages

--- a/src/SuperAdminBundle/Resources/config/routing.yml
+++ b/src/SuperAdminBundle/Resources/config/routing.yml
@@ -56,6 +56,6 @@ superadmin_trip_roles:
 
 superadmin_trip_roles_delete:
     path:   /trips/{trip_id}/deleteRoles/{admin_id}
-    defaults:  { _controller:SuperAdminBundle:TripManager:deleteAdminAction }
+    defaults:  { _controller:SuperAdminBundle:TripManager:deleteAdmin }
     requirements:
         id:   \d+
